k8s/manifests/03-workload/02-kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: refit-kafka
  namespace: refit-app
spec:
  serviceName: refit-kafka-svc
  replicas: 1
  selector:
    matchLabels:
      app: refit-kafka
  template:
    metadata:
      labels:
        app: refit-kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka:3.8.1
        ports:
        - containerPort: 9092
          name: client
        - containerPort: 9093
          name: controller
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: kafka-data
          mountPath: /var/lib/kafka/data
      volumes:
      - name: kafka-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: refit-kafka-svc
  namespace: refit-app
spec:
  selector:
    app: refit-kafka
  ports:
  - name: client
    protocol: TCP
    port: 9092
    targetPort: 9092
